Onto the seventh question. Variables separated into their own file.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
     <title>Advent of Code Challenge</title>
 
     <body>
-        <script language = "javascript" type = "text/javascript" src="main.js"></script>
+        <script language = "javascript" type = "text/javascript" src="src/variables.js"></script>
+        <script language = "javascript" type = "text/javascript" src="src/helpers.js"></script>
+        <script language = "javascript" type = "text/javascript" src="src/main.js"></script>
         <link rel="stylesheet" href='style.css'></style>
     </body>
 </html>
